--- a/Mango.web/appsettings.json
+++ b/Mango.web/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "ProductAPI": "https://localhost:5001",
-    "AuthorityServer": "https://localhost:5101/"
+    "AuthorityServer": "https://localhost:5101/",
+    "ShoppingCartAPI": "https://localhost:5201"
   }
 }
