Section 10 - Coupon API Service

--- a/Mango.web/appsettings.json
+++ b/Mango.web/appsettings.json
@@ -10,6 +10,7 @@
   "ServiceUrls": {
     "ProductAPI": "https://localhost:5001",
     "AuthorityServer": "https://localhost:5101/",
-    "ShoppingCartAPI": "https://localhost:5201"
+    "ShoppingCartAPI": "https://localhost:5201",
+    "CouponAPI": "https://localhost:5301"
   }
 }
